syntax = "proto2";
option java_multiple_files = true;
package org.redstone.protobuf.msg;

message JoinBattleReply
{
  optional string address;
  optional int32 roomId;
}
